--- a/css/global.css
+++ b/css/global.css
@@ -82,6 +82,12 @@ h1 {
   left: 2rem;
 }
 
+.manual {
+  position: absolute;
+  top: 2rem;
+  left: 21%;
+}
+
 .guess {
   background: none;
   border: 4px solid #eee;
@@ -116,4 +122,63 @@ h1 {
 
 .label-score {
   margin-bottom: 2rem;
+}
+
+.normal-text {
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #222;
+  text-align: justify;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+
+  background-color: white;
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.show-modal {
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.75rem 3.5rem;
+  margin: 5rem 2rem;
+  border: none;
+  background-color: #fff;
+  color: #444;
+  border-radius: 10rem;
+  cursor: pointer;
+}
+
+.close-modal {
+  position: absolute;
+  top: 1.2rem;
+  right: 2rem;
+  font-size: 5rem;
+  color: #333;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
+}
+
+.hidden {
+  display: none;
 }
